<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <properties>
        <shongo.version>0.10.0</shongo.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <groupId>cz.cesnet.shongo</groupId>
    <artifactId>shongo</artifactId>
    <version>${shongo.version}</version>
    <name>Shongo</name>
    <description>Shongo resource management system.</description>
    <packaging>pom</packaging>

    <modules>
        <module>shongo-client-cli</module>
        <module>shongo-client-web</module>
        <module>shongo-common-api</module>
        <module>shongo-common</module>
        <module>shongo-controller-api</module>
        <module>shongo-controller</module>
        <module>shongo-connector-api</module>
        <module>shongo-connector</module>
        <module>shongo-report-generator</module>
    </modules>

    <repositories>
        <!-- Shongo project contains internal maven repository for libraries
             that aren't placed in any of central maven repositories -->
        <repository>
            <id>shongo-repository</id>
            <name>Shongo Maven Repository</name>
            <url>file://${project.basedir}/../shongo-common/lib</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <!-- Shongo project contains internal maven repository for libraries
             that aren't placed in any of central maven repositories -->
        <pluginRepository>
            <id>shongo-plugin-repository</id>
            <name>Shongo Plugin Maven Repository</name>
            <url>file://${project.basedir}/../lib</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- We use SLF4J API for all logging in Shongo -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.4</version>
        </dependency>

        <!-- We want the Commons Logging (used in libraries) to be implemented
             by SLF4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jcl-over-slf4j</artifactId>
            <version>1.6.4</version>
        </dependency>

        <!-- We want the JUL (java.util.logging, used in libraries) to be
             implemented by SLF4J.
             The cz.cesnet.shongo.common.util.Logging.installBridge() must be
             called to proper install this bridge. -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>1.6.4</version>
        </dependency>

        <!-- SLF4J will be implemented by LOG4J -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.30</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.13.0</version>
        </dependency>

        <!-- For unit testing purposes the JUnit library is used -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13</version>
        </dependency>

    </dependencies>

    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.vintage</groupId>
                        <artifactId>junit-vintage-engine</artifactId>
                        <version>5.6.0</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <forkCount>0</forkCount>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <workingDirectory>${project.basedir}</workingDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>
